--- a/styles/main-styles.css
+++ b/styles/main-styles.css
@@ -21,12 +21,16 @@ body {
     box-sizing: border-box;
     flex-wrap: wrap;
     text-align: center;
+    flex: 1;
+    display: flex;
+    flex-direction: column;
 }
 
 /* Section "About" Styles */
 .section-about {
     background-color: #FFE0E9;
     text-align: left;
+    justify-content: left;
 }
 
 /* Sections "Greeting" (some word or phrase that needs to be addressed but not as a title per se) */
@@ -60,6 +64,7 @@ body {
     object-fit: cover;
     display: block;
     margin: 0 auto;
+    align-items: center;
 }
 
 /* Button specifications to meet the aesthetic of the web site*/
@@ -160,6 +165,11 @@ body {
     font-size: 2em;
     color: black;
     text-shadow: 1px 1px 2px #FFE0E9;
+}
+
+/* Section "My projects"styles */
+.section-projects {
+    background-color: #FFE0E9;
 }
 
 
