--- a/styles/main-styles.css
+++ b/styles/main-styles.css
@@ -129,7 +129,7 @@ body {
     display: grid;
     grid-template-columns: repeat(4, 1fr); 
     grid-template-rows: repeat(4, 1fr); 
-    gap: 10px; 
+    gap: 20px; 
     justify-content: center;
     align-content: center;
 }
@@ -141,11 +141,24 @@ body {
     align-content: center;
 }
 
+.grid-skill {
+    background-color: #F2F2F2;
+    border: 1px solid #3F3D56;
+    border-radius: 5px;
+}
+
 /* Size and Style definition for Icons related to skills */
 .icon-skill {
     font-size: 5em;
-    margin-top: 22px;
-    margin-bottom: 22px;
+    margin-top: 15px;
+    margin-bottom: 15px;
+    display: block;
+}
+
+.name-skill {
+    font-size: 1.4em;
+    font-weight: 700;
+    color: #B9375E;
     display: block;
 }
 
