--- a/styles/main-styles.css
+++ b/styles/main-styles.css
@@ -116,6 +116,7 @@ a:link {
     display: flex;
 }
 
+/* Elements that are expected to be displayed in a row */
 .element-row {
     flex: 1;
 }
@@ -158,6 +159,11 @@ a:link {
 .grid-skill {
     background-color: #F2F2F2;
     border: 1px solid #3F3D56;
+    border-radius: 5px;
+}
+
+.grid-skill:hover {
+    border: 2px solid #B9375E;
     border-radius: 5px;
 }
 
