Changes to the hover of the section skills

--- a/styles/main-styles.css
+++ b/styles/main-styles.css
@@ -209,6 +209,11 @@ a:link {
     background-color: #FFE0E9;
 }
 
+/* Title of the Section "My projects" */
+.projects-title {
+    color:#B9375E;
+}
+
 
 
 
