Added a grid for the Projects section. Include styles to each grid-item.

--- a/styles/main-styles.css
+++ b/styles/main-styles.css
@@ -156,13 +156,13 @@ a:link {
     align-content: center;
 }
 
-.grid-skill {
+.grid {
     background-color: #F2F2F2;
     border: 1px solid #3F3D56;
     border-radius: 5px;
 }
 
-.grid-skill:hover {
+.grid:hover {
     border: 1px solid #B9375E;
     border-radius: 5px;
 }
