Applying same classes for grid (skills) and grid (projects), renaming classes to do so. Adding the titles and images for the projects items

--- a/styles/main-styles.css
+++ b/styles/main-styles.css
@@ -175,7 +175,7 @@ a:link {
     display: block;
 }
 
-.name-skill {
+.name-grid-item {
     font-size: 1.4em;
     font-weight: 700;
     color: #B9375E;
