--- a/styles/main-styles.css
+++ b/styles/main-styles.css
@@ -132,11 +132,7 @@ a:link {
     font-weight: 700;
     font-size: 2rem;
     padding: 0%;   
-}
-
-/* Title for section "Skills" */
-.skills-title {
-    color: #B9375E;
+    color:#B9375E;
 }
 
 /* Grid for skills definition */
@@ -180,6 +176,7 @@ a:link {
     font-weight: 700;
     color: #B9375E;
     display: block;
+    margin-top: 18px;
 }
 
 /* "Quote Interlude" styles */
@@ -209,11 +206,14 @@ a:link {
     background-color: #FFE0E9;
 }
 
-/* Title of the Section "My projects" */
-.projects-title {
-    color:#B9375E;
+/* Styles for images in the "My Projects" section */
+.img-project {
+    max-width: 100%;
+    max-height: 100%;
+    width: 15em;
+    height: 15em;
+    margin: auto;
 }
 
-
-
+/* Styles for the containers for the "Contact me" section */
 
