Created and added the class 'section-contact' to only change the bacnground color of the section (by now) but its goign to include the padding and margins in the future

--- a/styles/main-styles.css
+++ b/styles/main-styles.css
@@ -216,4 +216,6 @@ a:link {
 }
 
 /* Styles for the containers for the "Contact me" section */
-
+.section-contact {
+    background-color: white;
+}
