--- a/styles/main-styles.css
+++ b/styles/main-styles.css
@@ -106,13 +106,12 @@ body {
 a:link {
     color: #FFE0E9;
     text-decoration: none;
-  }
-  
+}
   /* Hyperlink visited */
-  a:visited {
+a:visited {
     color: #FFE0E9;
     text-decoration: none;
-  }
+}
 
 /* Flex container */
 .flex-container {
@@ -240,6 +239,11 @@ a:link {
     list-style-type: none;
 }
 
+.vertical-list li{
+    text-align: left;
+    margin: 10px;
+}
+
 .horizontal-list {
     list-style-type: none;
 }
@@ -247,4 +251,10 @@ a:link {
 .horizontal-list li {
     display: inline-block;
     margin-right: 10px;
+}
+
+/* Styles for the username for social media icons */
+.social-media-user {
+    display: inline;
+    margin: 2px;
 }
