--- a/styles/main-styles.css
+++ b/styles/main-styles.css
@@ -33,6 +33,7 @@ body {
 /* Section "About" Styles */
 .section-about {
     background-color: #FFE0E9;
+    align-content: center;
     text-align: left;
     
 }
@@ -116,11 +117,13 @@ a:visited {
 /* Flex container */
 .flex-container {
     display: flex;
+    align-items: center;
 }
 
 /* Elements that are expected to be displayed in a row */
 .element-row {
     flex: 1;
+    text-align: left;
 }
 
 /* Section "Skills" */
@@ -153,6 +156,7 @@ a:visited {
     padding: 20px;
     justify-content: center;
     align-content: center;
+    cursor: pointer;
 }
 
 .grid {
@@ -257,4 +261,14 @@ a:visited {
 .social-media-user {
     display: inline;
     margin: 2px;
+}
+
+/* Styles for the pseudo-classes of Font Awesome */
+
+.fa-brands:hover {
+    color: #B9375E;
+}
+
+.fa-solid:hover {
+    color: #B9375E;
 }
