--- a/styles/main-styles.css
+++ b/styles/main-styles.css
@@ -43,6 +43,7 @@ body {
     font-weight: 700;
     font-size: 2rem;
     padding: 0%;   
+    margin: 0;
 }
 
 /* Sections "Author" (whether it's a quote author or the author of this site, for example) */
@@ -52,6 +53,7 @@ body {
     color: #B9375E;
     padding: 0%;
     margin: 0;
+    margin-top: 3px;
 }
 
 /* Sections "Description"(a little text describing what it's this about)  */
@@ -59,12 +61,13 @@ body {
     word-wrap: break-word;
     font-size: 1.2rem;
     flex-direction: column;
+    margin-top: 1em;
 }
 
 /* Sections "Principal Image" always related with the head of the section*/
 .section-image {
     max-width: 100%;
-    width: 100%;
+    width: 80%;
     height: auto;
     object-fit: cover;
     display: block;
@@ -120,6 +123,7 @@ a:visited {
     display: flex;
     flex-wrap: wrap;
     flex-direction: row;
+    align-items: center;
 }
 
 /* Elements that are expected to be displayed in a row */
