Adjusted the alignment of the image and text contents of  the section about-me

--- a/styles/main-styles.css
+++ b/styles/main-styles.css
@@ -35,6 +35,11 @@ body {
     background-color: #FFE0E9;
     align-content: center;
     text-align: left;
+    padding-top: 17em;
+    padding-bottom: 17em;
+    padding-left: 25em;
+    padding-right: 25em;
+
     
 }
 
@@ -59,15 +64,15 @@ body {
 /* Sections "Description"(a little text describing what it's this about)  */
 .section-description {
     word-wrap: break-word;
-    font-size: 1.2rem;
+    font-size: 1rem;
     flex-direction: column;
-    margin-top: 1em;
+    margin-top: 0.5em;
 }
 
 /* Sections "Principal Image" always related with the head of the section*/
 .section-image {
     max-width: 100%;
-    width: 80%;
+    width: 100%;
     height: auto;
     object-fit: cover;
     display: block;
@@ -86,7 +91,7 @@ body {
     font-weight: bold;
     font-size: 1em;
     display: inline-block;
-    width: 30%;
+    width: 40%;
     object-fit: cover;
     cursor: pointer;
     margin-top: 25px;
@@ -123,13 +128,14 @@ a:visited {
     display: flex;
     flex-wrap: wrap;
     flex-direction: row;
-    align-items: center;
+    align-content: center;
 }
 
 /* Elements that are expected to be displayed in a row */
 .element-row {
     flex: 1;
     text-align: justify;
+    
 }
 
 /* Section "Skills" */
