--- a/styles/main-styles.css
+++ b/styles/main-styles.css
@@ -3,6 +3,47 @@
     box-sizing:content-box;
 }
 
+/* Navigation bar (navbar) styles */
+.navbar {
+    top: 0;
+    padding-top: 1em;
+    padding-bottom: 1em;
+    padding-right: 26%;
+    display: flex;
+    justify-content: flex-end;
+    /* box-shadow: -10px 0 20px rgba(0, 0, 0, 0.3); */
+    box-shadow: 0.3em 0.3em 1em rgba(0,0,0,0.15);
+    z-index: 1000;
+}
+
+/* Styles while hovering on elements of the navigation bar */
+.navbar-item-primary {
+    padding-top: 0.5em;
+    padding-bottom: 0.5em;
+    padding-left: 1em;
+    padding-right: 1em;
+    background-color: #B9375E;
+    color: #F2F2F2;
+    border-radius: 25px;
+}
+
+.navbar-item-primary:hover {
+    padding-top: 0.5em;
+    padding-bottom: 0.5em;
+    padding-left: 1em;
+    padding-right: 1em;
+    background-color: #E05780;
+    color: #F2F2F2;
+    border-radius: 25px;
+    transition-duration: 200ms;
+    
+    
+}
+
+.navbar-item-secondary:hover {
+
+}
+
 /* Body set-up */
 body {
     padding: 0em;  
@@ -115,12 +156,16 @@ body {
 a:link {
     color: black;
     text-decoration: none;
+    font-family: 'Space Grotesk', sans-serif;
+    font-size: 1em;
 }
 
   /* Hyperlink visited */
 a:visited {
     color: black;
     text-decoration: none;
+    font-family: 'Space Grotesk', sans-serif;
+    font-size: 1em;
 }
 
 /* Flex container */
@@ -259,7 +304,6 @@ a:visited {
 .vertical-list li{
     text-align: left;
     margin: 10px;
-    /* display: block; */
 }
 
 .horizontal-list {
@@ -268,7 +312,7 @@ a:visited {
 
 .horizontal-list li {
     display: inline-block;
-    margin-right: 10px;
+    margin-right: 2.5em;
 }
 
 /* Styles for the username for social media icons */
