--- a/styles/main-styles.css
+++ b/styles/main-styles.css
@@ -13,6 +13,8 @@
     justify-content: flex-end;
     box-shadow: 0.3em 0.3em 1em rgba(0,0,0,0.15);
     z-index: 1000;
+    background-color: white;
+    position: sticky;
 }
 
 /* Styles while hovering on elements of the navigation bar */
@@ -75,8 +77,8 @@ body {
     background-color: #FFE0E9;
     align-content: center;
     text-align: left;
-    padding-top: 17em;
-    padding-bottom: 17em;
+    padding-top: 15em;
+    padding-bottom: 15em;
     padding-left: 25em;
     padding-right: 25em;
 
@@ -104,7 +106,7 @@ body {
 /* Sections "Description"(a little text describing what it's this about)  */
 .section-description {
     word-wrap: break-word;
-    font-size: 1rem;
+    font-size: 1.3rem;
     flex-direction: column;
     margin-top: 0.5em;
 }
@@ -185,6 +187,7 @@ a:visited {
 /* Section "Skills" */
 .section-skills {
     background-color: white;
+    padding-top: 7em;
     
 }
 
