--- a/styles/main-styles.css
+++ b/styles/main-styles.css
@@ -188,6 +188,9 @@ a:visited {
 .section-skills {
     background-color: white;
     padding-top: 7em;
+    padding-bottom: 7em;
+    padding-left: 25em;
+    padding-right: 25em;
     
 }
 
@@ -207,7 +210,7 @@ a:visited {
     gap: 20px; 
     justify-content: center;
     align-content: center;
-    padding: 20rem;
+    margin-top: 4em;
 }
 
 .grid-item {
