--- a/styles/main-styles.css
+++ b/styles/main-styles.css
@@ -230,6 +230,7 @@ a:visited {
 .grid:hover {
     border: 1px solid #B9375E;
     border-radius: 5px;
+    transition-duration: 500ms;
 }
 
 /* Size and Style definition for Icons related to skills */
