Changed the border color of the grid items for the projects sections

--- a/styles/main-styles.css
+++ b/styles/main-styles.css
@@ -223,7 +223,7 @@ a:visited {
 
 .grid {
     background-color: #F2F2F2;
-    border: 1px solid #3F3D56;
+    border: 1px solid #DDDFE5;
     border-radius: 5px;
 }
 
