Modification of the padding for the description of the section Projects. Aldo deleted the '-' symbol in the quote author

--- a/styles/main-styles.css
+++ b/styles/main-styles.css
@@ -297,6 +297,12 @@ a:visited {
     padding-right: 25em;
 }
 
+/* Styles for the Projects description */
+.projects-description {
+    padding-left: 10em;
+    padding-right: 10em;
+}
+
 /* Styles for images in the "My Projects" section */
 .img-project {
     max-width: 100%;
