--- a/styles/main-styles.css
+++ b/styles/main-styles.css
@@ -424,6 +424,10 @@ a:visited {
     border-color: transparent;
     height: 2em;
     width: auto;
+    text-align: left;
+    cursor: text;
+    padding-left: 15px;
+    padding-right: 15px;
 }
 
 .form-textarea {
@@ -432,5 +436,7 @@ a:visited {
     border-color: transparent;
     height: 13em;
     width: auto;
+    padding-left: 15px;
+    padding-right: 15px;
 }
 
