--- a/styles/main-styles.css
+++ b/styles/main-styles.css
@@ -428,6 +428,13 @@ a:visited {
     cursor: text;
     padding-left: 15px;
     padding-right: 15px;
+    padding-top: 5px;
+    padding-bottom: 5px;
+}
+
+.form-input:focus {
+    transition-duration: 200ms;
+    border: 5px #B9375E;
 }
 
 .form-textarea {
@@ -436,7 +443,6 @@ a:visited {
     border-color: transparent;
     height: 13em;
     width: auto;
-    padding-left: 15px;
-    padding-right: 15px;
+    padding: 15px;
 }
 
