--- a/styles/main-styles.css
+++ b/styles/main-styles.css
@@ -463,6 +463,8 @@ a:visited {
     padding-top: 5.5em;
     padding-bottom: 5.5em;
     display: flex;
+    flex-direction: column;
+    align-items: center;
     align-content: center;
     justify-content: center;
 }
@@ -479,39 +481,48 @@ a:visited {
     color: white;
 }
 
-/* Styles for the username for social media icons in the footer */
-.fo-social-media-user {
-    display: inline;
-    margin-left: 10px;
-}
-
 /* Styles for the pseudo-classes of hte contact-me section icons from Font Awesome in the footer */
 .fo-social-media-icon {
     max-width: 100%;
     width: 20px;
     height: auto;
+    background-color: white; 
     font-size: 1.3em;
-    background-color: white;
-    padding: 7px;
+    color: #B9375E;
+    padding: 0.5em;
     text-align: center;
     transition-duration: 500ms;
     border-radius: 50%;
-    border: 1px white;
+    border: 1px solid white;
 }
 
-/* Trigger when Hovers over social-media-icon or social-media-user in the footer*/
-.fo-social-media-link:hover .fo-social-media-icon {
-    color: #F2F2F2;
+
+/* Trigger when Hovers over social-media-icon in the footer*/
+.fo-social-media-icon:hover  {
     background-color: #B9375E;
-    padding: 7px;
+    color: white;
+    padding: 0.5em;
     border-radius: 50%;
     cursor: pointer;
     transition-duration: 500ms;
+    border: 1px solid white;
 }
 
-.fo-social-media-link:hover .fo-social-media-user {
-    color: #B9375E;
-    transition-duration: 500ms;
+.footer-site-author {
+    display: inline;
+    font-family: 'Space Grotesk', sans-serif;
+    font-size: 1em;
+    color: white;
+    text-shadow: 1px #E05780;
 }
 
+.emoji {
+    font-family: 'Noto Color Emoji', sans-serif;
+}
+
+.emphasis-author {
+    color: white;
+    font-family: 'Pacifico', cursive;
+    font-size: 1em;
+}
 
