--- a/styles/main-styles.css
+++ b/styles/main-styles.css
@@ -11,7 +11,8 @@
     padding-right: 21%;
     display: flex;
     justify-content: flex-end;
-    box-shadow: 0.3em 0.3em 1em rgba(0,0,0,0.15);
+    box-shadow: 0.3em 0.3em 1em rgba(0,0,0,0.15),
+                inset -10px 0 10px -10px rgba(0, 0, 0, 0.3);
     z-index: 1000;
     background-color: white;
     position: sticky;
@@ -70,6 +71,7 @@ body {
     display: flex;
     flex-direction: column;
     justify-content: center;
+    box-shadow: inset -10px 0 10px -10px rgba(0, 0, 0, 0.3);
 }
 
 /* Section "About" Styles */
@@ -471,6 +473,7 @@ a:visited {
     align-items: center;
     align-content: center;
     justify-content: center;
+    box-shadow: inset -10px 0 10px -10px rgba(0, 0, 0, 0.3);
 }
 
 /* Styles for every list item (in a horizontal list) that belongs to the footer links */
