--- a/styles/main-styles.css
+++ b/styles/main-styles.css
@@ -67,6 +67,7 @@ body {
     box-sizing: border-box;
     text-align: center;
     box-shadow: inset -10px 0 10px -10px rgba(0, 0, 0, 0.3);
+    /* display: flex; */
 }
 
 /* Section "About" Styles */
@@ -78,8 +79,6 @@ body {
     padding-bottom: 17.5em;
     padding-left: 25em;
     padding-right: 25em;
-
-    
 }
 
 /* Sections "Greeting" (some word or phrase that needs to be addressed but not as a title per se) */
@@ -526,5 +525,48 @@ a:visited {
     color: white;
     font-family: 'Pacifico', cursive;
     font-size: 1em;
+}
+
+/* Responsive propierties */
+/* Navigation bar */
+@media (max-width: 1100px) {
+    .navbar {
+        display: none;
+    }
+}
+
+/* Sections */
+@media (max-width: 1100px) {
+
+    .section {
+        padding-top: 7em;
+        padding: 9em;
+        overflow: hidden; 
+    }
+    .flex-container {
+        flex-direction: column;
+        padding: 0;
+    }
+    .element-row {
+        align-items: center;
+        text-align: center;
+        padding: 0;
+    }
+    .section-description {
+        margin-top: 0.2em;
+        margin-bottom: 0.3em;
+    } 
+
+    .section-image {
+        margin-top: 30px;
+    }
+}
+
+
+/* Media query when the width of the page is <=  600px */
+@media (max-width: 600px) {
+    .grid-container {
+        grid-template-columns: 1fr; /* One column*/
+    }
 }
 
