--- a/styles/main-styles.css
+++ b/styles/main-styles.css
@@ -62,23 +62,19 @@ body {
     border-color: 3px transparent;
     font-family: 'Space Grotesk', sans-serif;
     font-size: 1em;
-    width: 100%;
-    max-width: 100%;
     box-sizing: border-box;
     text-align: center;
     box-shadow: inset -10px 0 10px -10px rgba(0, 0, 0, 0.3);
-    /* display: flex; */
+    min-height: calc(100vh - 90px);
+    display: flex;
 }
 
 /* Section "About" Styles */
 .section-about {
     background-color: #FFE0E9;
-    align-content: center;
+    align-items: center;
+    justify-content: center;
     text-align: left;
-    padding-top: 17.5em;
-    padding-bottom: 17.5em;
-    padding-left: 25em;
-    padding-right: 25em;
 }
 
 /* Sections "Greeting" (some word or phrase that needs to be addressed but not as a title per se) */
@@ -110,7 +106,7 @@ body {
 /* Sections "Principal Image" always related with the head of the section*/
 .section-image {
     max-width: 100%;
-    width: 100%;
+    width: 30em;
     height: auto;
     object-fit: cover;
     display: block;
@@ -539,27 +535,31 @@ a:visited {
 @media (max-width: 1100px) {
 
     .section {
-        padding-top: 7em;
-        padding: 9em;
         overflow: hidden; 
+        width: 100vw; 
+        height: 100vh;
     }
     .flex-container {
         flex-direction: column;
         padding: 0;
     }
-    .element-row {
+     .element-row {
         align-items: center;
+        justify-content: center;
         text-align: center;
         padding: 0;
-    }
-    .section-description {
-        margin-top: 0.2em;
-        margin-bottom: 0.3em;
     } 
+    .section-description {
+        /* margin-top: 0.2em;
+        margin-bottom: 0.5em; */
 
+    } 
+    /*
     .section-image {
-        margin-top: 30px;
-    }
+        margin-top: 0.8em;
+    } */
+
+
 }
 
 
