--- a/styles/main-styles.css
+++ b/styles/main-styles.css
@@ -182,7 +182,7 @@ a:visited {
     justify-content: center;    
 }
 
-.skills-description {
+.skills-description, .projects-description {
     max-width: 20em;
 } 
 
@@ -247,6 +247,9 @@ a:visited {
     background-color: #B9375E;
     padding-top: 5.5em;
     padding-bottom: 5.5em;
+    align-items: center;
+    justify-content: center;    
+    flex-direction: column;
 }
 
 /* Styles for the quote itself */
@@ -254,16 +257,16 @@ a:visited {
     font-size: 1.5em;
     font-weight: 700;
     color:#FFE0E9;
-    display: inline-block;
-    padding-left: 20em;
-    padding-right: 20em;
+    max-width: 35em;
 }
 
 /* Styles for the name of the autor of the quote */
 .quote-autor {
+    font-family: 'Pacifico', cursive;
     font-size: 2em;
     color: black;
     text-shadow: 1px 1px 2px #FFE0E9;
+    text-align: center;
 }
 
 /* Changing font-sizes for the quoting left-quoting right icons */
@@ -277,17 +280,10 @@ a:visited {
 
 /* Section "My projects"styles */
 .section-projects {
+    flex-direction: column;
     background-color: #FFE0E9;
-    padding-top: 7em;
-    padding-bottom: 7em;
-    padding-left: 25em;
-    padding-right: 25em;
-}
-
-/* Styles for the Projects description */
-.projects-description {
-    padding-left: 20em;
-    padding-right: 20em;
+    align-items: center;
+    justify-content: center;    
 }
 
 /* Styles for images in the "My Projects" section */
@@ -302,12 +298,9 @@ a:visited {
 /* Styles for the section "Contact" */
 .section-contact {
     background-color: white;
-    align-content: center;
+    flex-direction: column;
+    align-items: center;
     justify-content: center;
-    padding-top: 13em;
-    padding-bottom: 8em;
-    padding-left: 23em;
-    padding-right: 23em;
 }
 
 /* Styles for the containers for the "Contact me" section */
@@ -315,23 +308,18 @@ a:visited {
     background-color: #F2F2F2;
     border: 1px solid #B9375E;
     border-radius: 5px;
-    /* width: 55%;
-    height: 55%; */
     align-content: center;
+    max-width: 70%;
 }
 
 /* Styles for the lists used in the document */
-.vertical-list {
+.vertical-list, .horizontal-list {
     list-style-type: none;
 }
 
 .vertical-list li{
     text-align: left;
     margin: 10px;
-}
-
-.horizontal-list {
-    list-style-type: none;
 }
 
 .horizontal-list li {
@@ -383,25 +371,24 @@ a:visited {
 }
 
 /* Styles specificly for the titles of the contact-me section */
+.contact-form {
+    margin-right: 2.5rem;
+}
+
 .contact-title {
-    padding-left: 2.5rem;
-    margin-bottom: 30px;
+    margin-bottom: 0.5em;
+    margin-left: 2.5rem;
+    margin-right: 2.5rem;
 }
 
 .contact-description {
-    padding-left: 2.5em;
-    margin-top: 0;
-    margin-left: 0;
-}
-
-/* Styles for the form of the Contact section */
-.contact-form {
-    padding-right: 2.5em;
+    margin-left: 2.5em;
 }
 
 .form-item {
     display: flex;
     flex-direction: column;
+    
 }
 
 .form-label {
@@ -417,10 +404,6 @@ a:visited {
     width: auto;
     text-align: left;
     cursor: text;
-    padding-left: 15px;
-    padding-right: 15px;
-    padding-top: 5px;
-    padding-bottom: 5px;
 }
 
 .form-input:focus {
@@ -429,9 +412,6 @@ a:visited {
     outline: 0;
 } 
 
-/* .form-input:valid {
-    border: 1px solid green;
-} */
 
 .form-textarea {
     margin-top: 0.5em;
@@ -532,8 +512,6 @@ a:visited {
 @media (max-width: 1100px) {
     .section {
         overflow: hidden; 
-        width: 100vw; 
-        height: 100vh;
     }
     .flex-container {
         flex-direction: column;
@@ -554,13 +532,28 @@ a:visited {
         margin-top: 1.2em;
     }
 
-}
+    .section-about, .quote {
+        width: 100vw; 
+        height: 100vh;
+    }
 
-
-/* Media query when the width of the page is <=  600px */
-@media (max-width: 600px) {
     .grid-container {
         grid-template-columns: 1fr; /* One column*/
+    }
+
+    .contact-title, .contact-description {
+        text-align: left;
+        justify-content: left;
+        margin: 1.5rem;
+    }
+
+    .social-media-link{
+        text-align: left;
+        justify-content: left;
+    }
+
+    .contact-description {
+        max-width: 80%;
     }
 }
 
