--- a/styles/styles.css
+++ b/styles/styles.css
@@ -433,8 +433,7 @@ a:visited {
 /* the footer is flex so that allows align the content to the center */
 .footer-flex {
     background-color: #B9375E;
-    padding-top: 4em;
-    padding-bottom: 4em;
+    padding: 4em;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -501,15 +500,11 @@ a:visited {
 }
 
 /* Responsive propierties */
-/* Navigation bar */
+
 @media (max-width: 1100px) {
     .navbar {
         display: none;
     }
-}
-
-/* Sections media queries */
-@media (max-width: 1100px) {
     .section {
         overflow: hidden; 
     }
